# rental_helper

./: AGENTS.md  IMPLEMENTION_PLAN.MD  INITIAL_PROMPT.MD  README.md  TASK_TEMPLATE.MD  docker-compose.yml  pyproject.toml
docs/: persistence_migrations.md
docs/task_context/: README.md  architecture_schema.md  file_map.md  (+5 more)
tasks/: 1. Initialize repository scaffold.md  10. Implement admin bot account onboarding.md  11. Implement admin bot account lifecycle controls.md  12. Implement group binding and schedule admin commands.md  13. Build Telethon session supervisor.md  14. Publish inbound user messages to RabbitMQ.md  15. Execute outbound chatbot actions in the userbot worker.md  16. Index listings from the bound public group.md  17. Implement conversation state machine.md  18. Add Russian LLM extraction and response generation.md  19. Implement listing search and rejection loop.md  2. Add Python project tooling and local commands.md  20. Implement viewing scheduling flow.md  21. Implement upsell recommendation after viewing intent.md  22. Add observability, idempotency, and retry policies.md  23. Add unit test coverage for core business logic.md  24. Add integration tests and operator runbook.md  3. Implement configuration loading.md  4. Define shared domain models.md  5. Design database schema and migrations.md  6. Add repository layer for core entities.md  7. Define RabbitMQ event contracts.md  8. Implement RabbitMQ transport layer.md  9. Build admin bot access control and command shell.md
tests/: test_config_loading.py  test_domain_models.py  test_package_imports.py
(+28 files in other folders)
